I just need to fix the border color & add password visibility

--- a/style.css
+++ b/style.css
@@ -136,22 +136,13 @@ h3 {
     padding-left: 30px;
     background-color: transparent;
     height: 30px;
-    color: whitesmoke;
+    color: gray;
     border: 1px solid gray;
 }
 
 .focus-email {
     border: 2px solid gold;
     background-image: url("images/mail-focus.svg");
-    background-repeat: no-repeat;
-    background-position: 8px 5px;
-    background-size: 15px;
-    background-color: whitesmoke;
-}
-
-.focus-pass {
-    border: 2px solid gold;
-    background-image: url("images/lock-focus.svg");
     background-repeat: no-repeat;
     background-position: 8px 5px;
     background-size: 15px;
@@ -172,9 +163,19 @@ h3 {
     padding-left: 30px;
     background-color: transparent;
     height: 30px;
-    color: whitesmoke;
+    color: gray;
     border: 1px solid grey;
 }
+
+.focus-pass {
+    border: 2px solid gold;
+    background-image: url("images/lock-focus.svg");
+    background-repeat: no-repeat;
+    background-position: 8px 5px;
+    background-size: 15px;
+    background-color: whitesmoke;
+}
+
 
 .email-img, .lock-icon, .eye-icon {
     width: 1em;
